tests/invalid_inputs/sema/func_param_array.cpp

void f(int arr[5]);

int main() {

}
